<resources>
    <string name="app_name">ToDo Master</string>

    // Menüpunkte
    <string name="action_back">Zurück</string>
    <string name="action_usermenu">Benutzerverwaltung</string>
    <string name="action_new">Neues ToDo erstellen</string>
    <string name="action_deleteall">Alle ToDos löschen</string>
    <string name="action_sortdate">Liste sortieren nach Datum</string>
    <string name="action_sortimportance">Liste sortieren nach Wichtigkeit (dann Datum)</string>
    <string name="action_showhidedone">Erledigte ein/ausblenden</string>

    // Titel
    <string name="title_activity_first_start">Erster Start</string>
    <string name="title_activity_add_edit_to_do">Neu / Editieren</string>

    // Dialog Boxes

    <string name="dialog_erasetitle">Alle ToDo löschen?</string>
    <string name="dialog_erasemsg">Sind Sie sicher, dass Sie alle ToDo löschen möchten?</string>
    <string name="dialog_erasetitlesingle">Dieses ToDo löschen?</string>
    <string name="dialog_erasemsgsingle">Sind Sie sicher, dass Sie dieses ToDo löschen möchten?</string>
    <string name="title_activity_login">Login</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_launcher">Launcher</string>
    <string name="title_activity_user_management">UserManagement</string>
</resources>
